static/css/style.css
/* colours 
E0FBFC - Light Cyan - Highlight
C2DFE3 - Light Blue - Positive Button
9DB4C0 - Cadet Gray - Negative Button
5c6B73 - Payne's Gray - Lowlight
011502 - NIght - Background
*/
@font-face {
    font-family: 'Mandatory';
    src: url("{% static 'fonts/Mandatory.woff' %}") format('woff');
    font-weight: normal;
    font-style: normal;
}

* {
    color: #E0FBFC;
    font-family: Arial, Helvetica, sans-serif;
}

a {
    text-decoration: none;
    color: #E0FBFC;
}

body {
    background-color: #011502;
    width: 100vw;
    height: 100vh;
    padding: 0%;
    margin: 0;
    background-image: url("../images/pexels-maltelu-2244746.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

/* Whole heading/nav bar */
#nav-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: #5C6B73;
    border: 2px solid #9DB4C0;
    align-items: center;
}

#link-home {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

nav {
    max-height: fit-content;
}

nav ul {
    display: flex;
    flex-direction: row;
    padding-right: 12px;

}

nav ul li {
    list-style-type: none;
    padding: 12px;
}


#title-spanner {
    font-size: 75px;
}

#title-container {
    display: flex;
    flex-direction: row;
}

.block {
    margin: 32px;
    padding: 0 24px 24px 24px;
    border: 2px solid #9DB4C0;
    background-color: #5c6b73bb;
    height: 80vh;
    flex: 1; 

}

.double-block {
    display: flex;
    flex-direction: row;
    width: 100%;
}

@media (max-width: 800px) {
    .double-block {
        display: flex;
        flex-direction: column;
    }
}

.vehicle-list-item, .vehicle-list-item-last, .booking-list-item, .booking-list-item-last, .all-booking-list-item {
    width: 100%;
    border: 2px solid #9DB4C0;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

#new-vehicle-form, #new-booking-form {
    display: flex;
    flex-direction: column;
}

#new-vehicle-form *, #new-booking-form * {
    /* Needs work - temp fix  */
    color: black; 
}

#bookings-list {
    display: flex;
    flex-direction: column;
}



.vrn {
    background-color: #ffd800;
    
    border: 1px solid black;
    border-radius: 5px;
    color: black;
    
    font-family: 'Mandatory', sans-serif;
    
    /* for use in form-input */
    text-align: center !important;
    text-transform: uppercase; 

    /* Size/Aspect/Dimensions */
    aspect-ratio: 520 / 111;
}

.vrn-list {
    padding: 2px 12px;
    letter-spacing: 1px;
    font-size: 32px;
    font-size: 2rem;
    letter-spacing: 2px;
    font-weight: bold;
}

.vrn-xl {
    font-size: 79px;
    background-color: pink;
    border: 25px solid lime;
}

.electric {
    border-left: 15px solid green;
    padding-left: 0;
}

form {

}

form input {
    color: black;
}

form button, button {
    color: black;
}

#error {
    color: red;
}

#left-block-inner {
    padding: 12px;
    
}

input {
    color: black;
}

.toast {
    position: fixed;
    bottom: 2rem;
    left: 50%;
    transform: translateX(-50%);
    z-index: 1055;
}

.toast * {
    color: black;
}

.modal * {
    color: black;
}

.label {
    background-color: #5c6B73;
    opacity: 50%;
}

#profile-form-container {
    border: 2px solid red;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#profile-form {
    border: 3px solid lime;
    max-width: 680px;
    
}

/* Label and field */
#profile-form div {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

